[gd_scene load_steps=15 format=3 uid="uid://bt2xr3v0vltbj"]

[ext_resource type="Texture2D" uid="uid://chu26joch3i5g" path="res://assets/enemy_tank/head.png" id="1_68ggd"]
[ext_resource type="Script" path="res://scenes/game_object/enemy_tank/enemy_tank.gd" id="1_ggktp"]
[ext_resource type="Texture2D" uid="uid://ck83lqcbmap4i" path="res://assets/enemy_tank/body.png" id="2_ingxs"]
[ext_resource type="Script" path="res://addons/node_library/scripts/random_timer.gd" id="2_lpalb"]
[ext_resource type="Texture2D" uid="uid://c12p3aaab5q32" path="res://assets/enemy_tank/arm_right.png" id="4_nmug6"]
[ext_resource type="Texture2D" uid="uid://cxss0dll0xpqh" path="res://assets/enemy_tank/arm.png" id="5_wl6u6"]
[ext_resource type="PackedScene" uid="uid://bepn3wm1qex72" path="res://scenes/effect/enemy_spawn_particles.tscn" id="7_auueg"]

[sub_resource type="Animation" id="Animation_vjh1j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Root/Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Root/ArmRight:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Root/Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/Root:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kb6pe"]
resource_name = "run"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Root/Head:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Root/ArmRight:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Root/Body:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665]
}

[sub_resource type="Animation" id="Animation_1f71s"]
resource_name = "stun"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Root/Head:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523599, -0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Root/ArmLeft:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.523599, 0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Root:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1)]
}

[sub_resource type="Animation" id="Animation_u2phy"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Root:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(5.65685, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ut0c"]
_data = {
"RESET": SubResource("Animation_vjh1j"),
"run": SubResource("Animation_kb6pe"),
"spawn": SubResource("Animation_u2phy"),
"stun": SubResource("Animation_1f71s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic5v4"]
size = Vector2(18, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_anlja"]
radius = 6.0

[node name="EnemyTank" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_ggktp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ut0c")
}
autoplay = "spawn"

[node name="AttackTimer" type="Timer" parent="."]
script = ExtResource("2_lpalb")
max_wait_time = 3.0

[node name="TargetAcquisitionTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource("2_lpalb")
min_wait_time = 0.25
max_wait_time = 0.5

[node name="WindupTimer" type="Timer" parent="."]
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CenterMarker2D" type="Marker2D" parent="."]
position = Vector2(0, -12)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_ic5v4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_anlja")

[node name="Visuals" type="Node2D" parent="."]

[node name="Root" type="Node2D" parent="Visuals"]

[node name="Head" type="Sprite2D" parent="Visuals/Root"]
position = Vector2(0, -19)
texture = ExtResource("1_68ggd")
centered = false
offset = Vector2(-9, -18)

[node name="Body" type="Sprite2D" parent="Visuals/Root"]
position = Vector2(0, -9)
texture = ExtResource("2_ingxs")
centered = false
offset = Vector2(-6, -7)

[node name="ArmRight" type="Sprite2D" parent="Visuals/Root"]
position = Vector2(6, -16)
texture = ExtResource("4_nmug6")
centered = false
offset = Vector2(-3, -2)

[node name="ArmLeft" type="Sprite2D" parent="Visuals/Root"]
unique_name_in_owner = true
position = Vector2(-5, -16)
rotation = 0.431445
texture = ExtResource("5_wl6u6")
centered = false
offset = Vector2(-5, -2)

[node name="BarrelMarker2D" type="Marker2D" parent="Visuals/Root/ArmLeft"]
unique_name_in_owner = true
position = Vector2(16, 4)

[node name="EnemySpawnParticles" parent="." instance=ExtResource("7_auueg")]
